# evosim

./: README.md  brain.py  config.py  genome.py  grid.py  main.py  node.py  organism.py  pyproject.toml  runConfig.py  simulation.py
evosim/: __init__.py  brain.py  coord.py  genome.py  genome_similarity.py  graph.py  grid.py  node.py  obstacle.py  organism.py  output.py  runConfig.py  simulation.py  survivalCriteria.py  video.py
src/: genome.py  graph.py  grid.py  main.py  node.py  organism.py  runConfig.py  simulation.py
